# Steam-Download-Proxy-Generator

./: .gitignore  LICENSE  README.md  build_downloader.py  build_generator.py  pyproject.toml
.github/workflows/: release.yml
src/: config.py  downloader.py  generator.py  util.py
src/entitys/: Depot.py  Game.py
src/enums/: Status.py
src/utils/: appinfo_util.py  util.py
