[project]
name = "steam-download-proxy-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "humanize>=4.16.0",
    "loguru>=0.7.3",
    "nuitka>=4.1.3",
    "path>=17.1.1",
    "steam[client]>=1.4.4",
    "tqdm>=4.69.0",
    "vdf>=3.4",
    "zstandard>=0.25.0",
]
